ver 0.18.5 (20??/??/??)
* configuration
  - fix crash when db_file is configured without music_directory
  - fix crash on "stats" without db_file/music_directory
* database
  - proxy: auto-reload statistics
* decoder
  - fluidsynth: auto-detect by default
* fix ia64, mipsel and other little-endian architectures
* fix build failures due to missing includes
* fix build failure with static libmpdclient

ver 0.18.4 (2013/11/13)
* decoder
  - dsdiff: fix byte order bug
* fix build failures due to missing includes
* libc++ compatibility

ver 0.18.3 (2013/11/08)
* fix stuck MPD after song change (0.18.2 regression)

ver 0.18.2 (2013/11/07)
* protocol:
  - "close" flushes the output buffer
* input:
  - cdio_paranoia: add setting "default_byte_order"
  - curl: fix bug with redirected streams
* playlist:
  - pls: fix reversed song order
* decoder:
  - audiofile: require libaudiofile 0.3 due to API breakage
  - dsf: enable DSD128
* enable buffering when starting playback (regression fix)
* fix build failures due to missing includes
* fix big-endian support

ver 0.18.1 (2013/11/04)
* protocol:
  - always ignore whitespace at the end of the line
* networking:
  - log UNIX domain path names instead of "localhost"
  - open listener sockets in the order they were configured
  - don't abort if IPv6 is not available
* output:
  - alsa: avoid endless loop in Raspberry Pi workaround
* filter:
  - autoconvert: fix "volume_normalization" with mp3 files
* add missing files to source tarball

ver 0.18 (2013/10/31)
* configuration:
  - allow tilde paths for socket
  - default filesystem charset is UTF-8 instead of ISO-8859-1
  - increase default buffer size to 4 MB
* protocol:
  - new command "readcomments" lists arbitrary file tags
  - new command "toggleoutput"
  - "find"/"search" with "any" does not match file name
  - "search" and "find" with base URI (keyword "base")
  - search for album artist falls back to the artist tag
  - re-add the "volume" command
* input: